# policyengine-uk-paper

./: .gitignore  CONTRIBUTING.md  PLAN.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: pending-citations.md
paper/: ijm.sty  index.qmd  macros.tex  preamble.tex
paper/bibliography/: references.bib
paper/sections/: abstract.tex  conclusion.tex  data.tex  disclosures.tex  discussion.tex  introduction.tex  model.tex  validation.tex
tests/: test_outline.py
